# argus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_IMPROVEMENTS.md  DOCKER_SETUP.md  LICENSE  QUICK_START.md  README.md  RUN_IMAGE_TEST.md  TEST_SUMMARY.md  demo_docker_functions.py  diagnostic_docker.py  pyproject.toml  test_docker_standalone.py  test_image_pull.py
.github/workflows/: ci.yml
examples/: README.md  docker_example.py
examples/demo-project/: README.md  argus.config.json  package-lock.json  package.json
examples/demo-project/contracts/: Claimer.sol  RewardToken.sol  Treasury.sol
examples/demo-project/contracts/test-helpers/: MockTreasury.sol  ReentrancyAttacker.sol
examples/example-plugin/: .gitignore  README.md  pyproject.toml
examples/example-plugin/argus_example_plugin/: __init__.py  plugin.py
examples/example-plugin/tests/: __init__.py  test_plugin.py
examples/simple-project/: README.md  argus.config.json  package.json
examples/simple-project/contracts/: SimpleBank.sol
examples/test-project/: argus.config.json  package.json
examples/web3bugs_13/: argus.config.json  hardhat.config.js  package-lock.json
examples/web3bugs_13/contracts/: MockEIP712Base.sol
examples/web3bugs_13/contracts/test-helpers/: ArgusMockTreasury.sol  MockEIP712Base.sol  MockERC20.sol  MockFactory.sol  MockMarket.sol  MockNftHub.sol  MockOrderbook.sol  MockRCFactory.sol  MockRCMarket.sol  MockRCNftHubL2.sol  MockRCOrderbook.sol  MockRCTreasury.sol  MockRealitio.sol  MockTreasury.sol  Mocks.sol  ReentrancyAttacker.sol  ReentrantERC20.sol  ReentrantTreasury.sol  TestEIP712Base.sol  TestTarget.sol  TestableNativeMetaTransaction.sol
examples/web3bugs_13/test/mocks/: MockRCNftHubL2.sol  MockRCOrderbook.sol  MockRCTreasury.sol  MockRealitio.sol
src/argus/: __init__.py
src/argus/core/: __init__.py  api.py  cli.py  cli.py.bk  config.py  docker.py  orchestrator.py  prompts.py
src/argus/core/generator/: __init__.py  generator.py  prompts.py
src/argus/core/orchestrator/: __init__.py  orchestrator.py  prompts.py
src/argus/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  provider.py
src/argus/llm/providers/: __init__.py  anthropic.py  gemini.py
src/argus/llm/providers/anthropic/: __init__.py  plugin.py  provider.py
src/argus/llm/providers/gemini/: __init__.py  plugin.py  provider.py
src/argus/plugins/: __init__.py  constants.py  registry.py
src/argus/plugins/plugin/: __init__.py  llm_provider_plugin.py  mcp_prompt_plugin.py  mcp_resource_plugin.py  mcp_tool_plugin.py  plugin.py
src/argus/server/: __init__.py  server.py
src/argus/server/prompts/: __init__.py
src/argus/server/resources/: __init__.py  filesystem.py
src/argus/server/tools/: __init__.py  command.py  filesystem.py  mythril.py  shell.py  slither.py
src/argus/services/: __init__.py
src/argus/services/mcp/: __init__.py  server.py  tools.py
src/argus/tools/: __init__.py  controller.py  tools.py
src/argus/tools/mythril/: controller.py
src/argus/tools/slither/: controller.py
src/argus/utils/: __init__.py  utils.py
tests/: README.md
tests/argus/core/: test_config.py  test_docker.json  test_docker.py
tests/argus/server/: test_server.py
tests/argus/server/resources/: test_filesystem.py
tests/argus/server/tools/: test_filesystem.py  test_mythril.py  test_shell.py  test_slither.py
tests/argus/services/mcp/: test_server.py  test_tools.py
tests/argus/tools/: __init__.py  test_mythril_controller.py  test_slither_controller.py
tests/integration/: __init__.py  test_mythril_integration.py  test_slither_integration.py
